remove guardian operator onboarding
